Bump to version 4.x and java 11 to 17